--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -253,6 +253,10 @@ html {
 
 .main-container{
   width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
 }
 
 .main-promo{
@@ -559,9 +563,95 @@ html {
   }
 
 
+/* LOGIN & REGISTER */
+.member-content{
+  width: 70%;
+  display: flex;
+  gap: 2%;
+  justify-content: center;
+  align-items: center;
+}
+
+.member-form{
+  width: 48%;
+  height: 350px;
+  margin-top: 100px;
+  background-color: white;
+}
+
+.member-form-title{
+  color: black;
+  font-size: 24px;
+  font-weight: 700;
+}
+
+.form-description{
+  color: black;
+  font-size: 16px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.user-input{
+  width: 95%;
+  height: 50px;
+  border: solid 1px lightgray;
+}
+
+.login-func{
+  width: 95%;
+  height: 50px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.register-func{
+  width: 95%;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: right;
+}
+
+.member-btn{
+  width: 200px;
+  height: 45px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  background-color: black;
+  font-size: 19px;
+  font-weight: 700;
+  border-radius: 20px;
+  cursor: pointer;
+}
 
 
+/* GIO HANG */
+.cart-container{
+  width: 70%;
+  margin-top: 150px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
+.payment-content{
+  width: 60%;
+  height: 500px;
+  background-color: aquamarine;
+}
+
+.cart-content{
+  width: 40%;
+  height: 500px;
+  background-color: brown;
+}
+
+
+/* FOOTER */
 .footer-container{
   width: 100%;
   height: 370px;
