Replace product brand by const

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -682,6 +682,9 @@ html {
   width: 40%;
   height: 500px;
   background-color: brown;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 /* FOOTER */
