--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -543,22 +543,26 @@ html {
 
 /* PHAN TRANG */
 /* Set the style for the a tag */
-.pagination a {
+.pagination li {
   color: black;
-  float: left;
-  padding: 12px 18px;
+  padding: 12px 19px;
   text-decoration: none;
 }
 /* set the style for the active class */
-.pagination a.active {
+.pagination li.active {
   background-color: black;
   color: white;
   /*Circle Design with CSS*/
   border-radius: 50%;
 }
 /* add background color when user hovers on inactive class */
-.pagination a:hover:not(.active) {
+.pagination li:hover:not(.active) {
   background-color: #ddd;
+  border-radius: 50%;
+}
+/* disabled item */
+.pagination li.disabled {
+  color: gray;
   border-radius: 50%;
 }
 
