--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -367,6 +367,7 @@ html {
 .new-items-img > img {
   width: 100%;
   height: 100%;
+  object-fit: contain;
 }
 
 .new-items-data {
@@ -774,6 +775,7 @@ html {
 .item-detail-img > img{
   width: 90%;
   height: 90%;
+  object-fit: contain;
 }
 
 .item-detail-info{
